# feb-2026-month-of-code

./: .gitignore  README.md
day-22-tax-estimator/: README.md  pyproject.toml
day-22-tax-estimator/config/jurisdictions/: nz_self_employed.json  us_self_employed.json
day-22-tax-estimator/tax_engine/cli/: main.py
day-22-tax-estimator/tax_engine/domain/: brackets.py  deduction.py  jurisdiction.py
day-22-tax-estimator/tests/: test_bracket_properties.py  test_brackets.py  test_cli.py  test_credits.py  test_deductions.py  test_estimator.py  test_jurisdiction.py  test_money.py  test_vat.py
day-23-invoice-extractor/: .coverage  README.md  mypy.ini  pyproject.toml
day-23-invoice-extractor/.github/workflows/: ci.yml
day-23-invoice-extractor/invoice_extractor/: main.py
day-23-invoice-extractor/invoice_extractor/cli/: main.py
day-23-invoice-extractor/invoice_extractor/domain/: invoice.py  line_item.py  money.py  validation.py
day-23-invoice-extractor/invoice_extractor/parsing/: errors.py  field_mapper.py  line_item_parser.py  segmenter.py  text_extractor.py
day-23-invoice-extractor/invoice_extractor/services/: extractor_services.py
day-23-invoice-extractor/invoice_extractor/tests/: test_acme_strategy.py  test_field_mapper.py  test_full_pipeline.py  test_invoice.py  test_json_snapshot.py  test_line_item.py  test_main_cli.py  test_main_direct_call.py  test_money.py  test_money_property.py  test_real_pdf_extraction.py  test_segmenter.py  test_strategy_registry.py  test_text_extractor.py  test_validation.py
day-23-invoice-extractor/scripts/: generate_fixture_pdf.py
day-25-keyword-discovery-tool/: README.md  pyproject.toml
day-25-keyword-discovery-tool/keyword_discovery/: cli.py
day-25-keyword-discovery-tool/keyword_discovery/domain/: corpus.py  document.py  keyword.py  scoring.py  token.py
day-25-keyword-discovery-tool/keyword_discovery/pipeline/: index_builder.py  ingestion.py  ngrams.py  normalizer.py  tokenizer.py
day-25-keyword-discovery-tool/keyword_discovery/services/: keyword_engine.py
day-25-keyword-discovery-tool/keyword_discovery/tests/: test_cli.py  test_end_to_end.py  test_index_builder.py  test_ingestion.py  test_ngrams.py  test_normalizer.py  test_scoring.py  test_tokenizer.py
day-27-automated-cloud-backup/: README.md  pyproject.toml
day-27-automated-cloud-backup/cloud_backup/cli/: main.py
day-27-automated-cloud-backup/cloud_backup/domain/: file_record.py  retention.py  snapshot.py
day-27-automated-cloud-backup/cloud_backup/engine/: backup_engine.py  hasher.py  index_store.py  scanner.py
day-27-automated-cloud-backup/cloud_backup/infra/: config_loader.py  logger.py  retry.py
day-27-automated-cloud-backup/cloud_backup/storage/: base_adapter.py  local_adapter.py  s3_adapter.py
day-27-automated-cloud-backup/cloud_backup/tests/: test_backup_engine_integration.py  test_cli.py  test_config_loader.py  test_hasher.py  test_index_store.py  test_local_adapter.py  test_retention.py  test_retry.py  test_s3_adapter.py  test_scanner.py  test_snapshot.py  test_verify.py
day-28-observability-harness/: Dockerfile  README.md  manual_validation.py  pyproject.toml
day-28-observability-harness/observability-harness/: pyproject.toml
day-28-observability-harness/observability-harness/contracts/: metrics_contract.py  slo_schema.py
day-28-observability-harness/observability-harness/instrumentation/: correlation.py  logger.py  retry.py  timing.py
day-28-observability-harness/observability-harness/slo/: evaluator.py  types.py  window.py
day-28-observability-harness/observability-harness/tests/: test_logging_schema.py  test_metrics_contract.py  test_retry_edge_cases.py
day-28-observability-harness/observability_harness/chaos/: injectors.py  toggles.py
day-28-observability-harness/observability_harness/ci/: coverage_gate.py  docker_gate.py  run_ci.py  schema_validator.py
day-28-observability-harness/observability_harness/contracts/: logging_schema.py  metrics_contract.py  slo_schema.py
day-28-observability-harness/observability_harness/instrumentation/: correlation.py  logger.py  retry.py
day-28-observability-harness/observability_harness/tests/: test_chaos_unit.py  test_coverage_gate.py  test_docker_gate.py  test_instrumentation.py  test_logging_schema.py  test_metrics_contract.py  test_retry_edge_cases.py  (+4 more)
(+397 files in other folders)
