[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tax-engine"
version = "0.1.0"
description = "Deterministic tax calculation engine using Decimal arithmetic."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Bonnie McConnell" }
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "mypy>=1.8",
    "httpx>=0.27"
]

[project.scripts]
tax-cli = "tax_engine.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"

[tool.mypy]
strict = true
python_version = "3.11"