[project]
name = "invoice-extractor"
version = "0.1.0"
description = "Deterministic invoice PDF parser"
requires-python = ">=3.11"
dependencies = [
    "pdfminer.six"
]

[project.scripts]
invoice-extractor = "invoice_extractor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true