[project]
name = "cloud-backup"
version = "0.1.0"
description = "Deterministic cloud backup engine"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cloud-backup = "cloud_backup.cli.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]