[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "observability-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "PyYAML"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["observability_harness*"]

[tool.coverage.run]
omit = [
    "observability_harness/tests/*",
]