[project]
name = "observability-harness"
version = "0.1.0"
description = "Portfolio Observability & Reliability Harness"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0"
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.mypy]
strict = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100