[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observability-harness"
version = "0.1.0"
description = "Deterministic observability governance harness"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0"
]

[tool.setuptools]
packages = [
    "contracts",
    "instrumentation",
    "slo",
    "chaos"
]

[tool.setuptools.package-dir]
"" = "."